# game-of-life

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  main.cpp
core/inc/: Application.h  GameOfLife.h  GameUI.h  Grid.h
core/src/: Application.cpp  GameOfLife.cpp  GameUI.cpp  Grid.cpp
vendors/: imgui.cmake  rlimgui.cmake
